--- a/public/tasks_source.json
+++ b/public/tasks_source.json
@@ -1,63 +1,53 @@
 [
   {
     "id": 1,
-    "name": "Onboarding New Hires",
+    "name": "Thor: Love and Thunder",
     "people": [
       { "id": 4, "name": "Chris Hemsworth", "age": 41 },
-      { "id": 5, "name": "Rihanna", "age": 37 },
-      { "id": 1, "name": "Taylor Swift", "age": 35 },
-      { "id": 3, "name": "Zendaya", "age": 28 },
-      { "id": 7, "name": "Macaulay Culkin", "age": 10 }
+      { "id": 5, "name": "Tessa Thompson", "age": 37 },
+      { "id": 3, "name": "Natalie Portman", "age": 28 },
+      { "id": 2, "name": "Christian Bale", "age": 17 }
+    ],
+
+    "allPeopleJustForReference": [
+      { "id": 1, "name": "Anya-Taylor Joy", "age": 23 },
+      { "id": 2, "name": "Christian Bale", "age": 17 },
+      { "id": 3, "name": "Natalie Portman", "age": 28 },
+      { "id": 4, "name": "Chris Hemsworth", "age": 41 },
+      { "id": 5, "name": "Tessa Thompson", "age": 37 },
+      { "id": 6, "name": "Jake Lloyd", "age": 8 },
+      { "id": 7, "name": "Liam Neeson", "age": 64 }
     ]
   },
   {
     "id": 2,
-    "name": "Customer Feedback Analysis",
+    "name": "Men in Black: International",
     "people": [
-      { "id": 3, "name": "Zendaya", "age": 28 },
-      { "id": 1, "name": "Taylor Swift", "age": 35 },
-      { "id": 2, "name": "Dwayne Johnson", "age": 52 }
+      { "id": 4, "name": "Chris Hemsworth", "age": 41 },
+      { "id": 5, "name": "Tessa Thompson", "age": 37 },
+      { "id": 7, "name": "Liam Neeson", "age": 64 }
     ]
   },
   {
     "id": 3,
-    "name": "New Feature Rollout",
+    "name": "Furiosa: A Mad Max Saga",
     "people": [
-      { "id": 3, "name": "Zendaya", "age": 28 },
-      { "id": 7, "name": "Macaulay Culkin", "age": 10 },
-      { "id": 6, "name": "Ryan Reynolds", "age": 48 }
+      { "id": 4, "name": "Chris Hemsworth", "age": 41 },
+      { "id": 1, "name": "Anya-Taylor Joy", "age": 23 }
     ]
   },
   {
     "id": 4,
-    "name": "Holiday Event Coordination",
+    "name": "Star Wars Episode I: The Phantom Menace",
     "people": [
-      { "id": 3, "name": "Zendaya", "age": 28 },
-      { "id": 5, "name": "Rihanna", "age": 37 },
-      { "id": 1, "name": "Taylor Swift", "age": 35 },
-      { "id": 8, "name": "Shirley Temple", "age": 11 }
+      { "id": 3, "name": "Natalie Portman", "age": 28 },
+      { "id": 6, "name": "Jake Lloyd", "age": 8 },
+      { "id": 7, "name": "Liam Neeson", "age": 64 }
     ]
   },
   {
     "id": 5,
-    "name": "Launch Marketing Campaign",
-    "people": [
-      { "id": 3, "name": "Zendaya", "age": 28 },
-      { "id": 8, "name": "Shirley Temple", "age": 11 },
-      { "id": 4, "name": "Chris Hemsworth", "age": 41 },
-      { "id": 5, "name": "Rihanna", "age": 37 },
-      { "id": 7, "name": "Macaulay Culkin", "age": 10 },
-      { "id": 1, "name": "Taylor Swift", "age": 35 }
-    ]
-  },
-  {
-    "id": 6,
-    "name": "Team Offsite Planning",
-    "people": [
-      { "id": 4, "name": "Chris Hemsworth", "age": 41 },
-      { "id": 3, "name": "Zendaya", "age": 28 },
-      { "id": 8, "name": "Shirley Temple", "age": 11 },
-      { "id": 1, "name": "Taylor Swift", "age": 35 }
-    ]
+    "name": "Newsies",
+    "people": [{ "id": 2, "name": "Christian Bale", "age": 17 }]
   }
 ]
